# RedMon

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  design_guide.md  move_pool_proposal.md  project.godot  run_editor.bat
.claude/: launch.json
data/: abilities.json  dialogs.json  encounters.json  items.json  maps.json  moves.json  natures.json  npcs.json  species.json  trainers.json
docs/: building_design.md  design_gap_and_roadmap.md  design_gap_hgengine.md  image_prompts.md  mon_design.md  npc_roster.md  qingmu_village_expansion_outline.md  sprite_spec.md  story_design.md
material/: view.html
scenes/: grassland.tscn  gym.tscn  main.tscn  overworld.tscn  town.tscn  village.tscn  world.tscn  华灵草原.tscn  后山小径.tscn  大世界.tscn  碧溪镇.tscn  翠竹馆.tscn  青木村.tscn
scripts/: audit_learnsets.py  battle.gd  battle.gd.uid  battle_ui.gd  battle_ui.gd.uid  center_fix.py  check_evolution_chains.py  check_learnset.py  check_learnset_detail.py  check_learnset_summary.py  check_learnset_table.py  check_learnset_v2.py  learnset_report.txt  main.gd  main.gd.uid  player.gd  player.gd.uid  process_sprites.py  show_issues.py  world.gd  world.gd.uid
tools/: RedMon-Editor.spec  RedMon编辑器.spec  _bst_report.py  _check_stats.py  add_missing_mons.py  analyze_text.py  batch_convert_sprites.py  bst_600_analysis.py  build_editor.bat  build_resizer.bat  build_tauri_editor.bat  (+25 more)
tools/editor/src-tauri/: Cargo.toml  tauri.conf.json
tools/editor/src-tauri/capabilities/: default.json
tools/editor/src-tauri/icons/: icon.icns
tools/editor/src-tauri/src/: lib.rs  main.rs
(+135 files in other folders)
