[package]
name = "redmon-editor"
version = "0.1.0"
description = "RedMon Game Data Editor"
authors = ["RedMon"]
edition = "2021"

[lib]
name = "redmon_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
